--- a/app/src/main/res/layout/riga_layout_impegno.xml
+++ b/app/src/main/res/layout/riga_layout_impegno.xml
@@ -21,9 +21,9 @@
     <ImageButton
         android:id="@+id/cancella_impegno"
         android:layout_width="60dp"
-        android:layout_height="53dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/cancella_impegno"
         android:tint="@color/colorAccent"
@@ -31,91 +31,77 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_delete"
         tools:targetApi="lollipop"
-        android:layout_marginRight="16dp" />
+        android:layout_marginRight="10dp" />
 
     <TextView
         android:id="@+id/wdata"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:textColor="@android:color/black"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toStartOf="@+id/cancella_impegno"
-        app:layout_constraintHorizontal_bias="0.624"
-        app:layout_constraintStart_toEndOf="@+id/woggetto"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/woggetto"
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:id="@+id/worainizio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toStartOf="@+id/cancella_impegno"
-        app:layout_constraintHorizontal_bias="0.789"
-        app:layout_constraintStart_toEndOf="@+id/woggetto"
-        app:layout_constraintTop_toBottomOf="@+id/wdata" />
+        app:layout_constraintStart_toEndOf="@+id/wdalle"
+        app:layout_constraintTop_toBottomOf="@+id/wdata"
+        android:layout_marginLeft="5dp" />
 
     <TextView
         android:id="@+id/worafine"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
         android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toStartOf="@+id/cancella_impegno"
-        app:layout_constraintHorizontal_bias="0.789"
-        app:layout_constraintStart_toEndOf="@+id/woggetto"
-        app:layout_constraintTop_toBottomOf="@+id/worainizio" />
-
-    <TextView
-        android:id="@+id/wtipo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wripetizione"
-        android:layout_marginLeft="10dp" />
+        app:layout_constraintStart_toEndOf="@+id/walle"
+        app:layout_constraintTop_toBottomOf="@+id/wdata"
+        android:layout_marginLeft="5dp" />
 
     <TextView
         android:id="@+id/wdalle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:text="@string/dalle"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toStartOf="@+id/worainizio"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wdata"
-        android:layout_marginRight="5dp" />
+        android:layout_marginLeft="10dp" />
 
     <TextView
         android:id="@+id/walle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="5dp"
         android:text="@string/alle"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toStartOf="@+id/worafine"
-        app:layout_constraintTop_toBottomOf="@+id/wdalle"
-        android:layout_marginRight="5dp" />
+        app:layout_constraintStart_toEndOf="@+id/worainizio"
+        app:layout_constraintTop_toBottomOf="@+id/wdata"
+        android:layout_marginLeft="5dp" />
 
-    <TextView
-        android:id="@+id/wripetizione"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="5dp"
-        android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/woggetto"
-        android:layout_marginLeft="10dp" />
+    <ImageButton
+        android:id="@+id/mostra_note"
+        android:layout_width="60dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@android:color/transparent"
+        android:contentDescription="@string/mostra_note"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cancella_impegno"
+        app:srcCompat="@android:drawable/ic_menu_more"
+        tools:targetApi="lollipop"
+        android:layout_marginRight="10dp" />
 </android.support.constraint.ConstraintLayout>
