--- a/app/src/main/res/layout/layout_dialog_attivitaincorso.xml
+++ b/app/src/main/res/layout/layout_dialog_attivitaincorso.xml
@@ -8,8 +8,8 @@
 
     <TableLayout
         android:id="@+id/tableLayout2"
-        android:layout_width="304dp"
-        android:layout_height="97dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
