--- a/app/src/main/res/layout/layout_dialog_note_impegni.xml
+++ b/app/src/main/res/layout/layout_dialog_note_impegni.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent">
 
     <TableLayout
-        android:layout_width="361dp"
-        android:layout_height="180dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
