--- a/app/src/main/res/layout/layout_dialog_rubrica.xml
+++ b/app/src/main/res/layout/layout_dialog_rubrica.xml
@@ -8,8 +8,8 @@
 
     <TableLayout
         android:id="@+id/tableLayout"
-        android:layout_width="328dp"
-        android:layout_height="284dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="70dp"
         android:layout_marginStart="70dp"
         android:layout_marginTop="16dp"
