--- a/app/src/main/res/layout/layout_dialog_attivitaincorso.xml
+++ b/app/src/main/res/layout/layout_dialog_attivitaincorso.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/oggetto_attivita_in_corso"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/oggetto"
+                android:text="@string/attivit_asterisco"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
@@ -51,7 +51,7 @@
                 android:id="@+id/scadenza_attivita"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/scadenza"
+                android:text="@string/scadenza_asterisco"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
