--- a/app/src/main/res/layout/riga_layout_impegno.xml
+++ b/app/src/main/res/layout/riga_layout_impegno.xml
@@ -101,7 +101,7 @@
         android:contentDescription="@string/mostra_note"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cancella_impegno"
-        app:srcCompat="@android:drawable/ic_menu_more"
+        app:srcCompat="?android:attr/actionModePasteDrawable"
         tools:targetApi="lollipop"
         android:layout_marginRight="10dp" />
 </android.support.constraint.ConstraintLayout>
