--- a/app/src/main/res/layout/layout_dialog_note_impegni.xml
+++ b/app/src/main/res/layout/layout_dialog_note_impegni.xml
@@ -90,7 +90,7 @@
                 android:id="@+id/dialogNote"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/nota"
+                android:text="@string/note"
                 android:textAlignment="center"
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
