--- a/app/src/main/res/layout/layout_dialog_attivitaincorso.xml
+++ b/app/src/main/res/layout/layout_dialog_attivitaincorso.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="@string/comprare_il_latte"
-                android:inputType="textCapWords"
+                android:inputType="textCapSentences"
                 android:textAlignment="center" />
         </TableRow>
 
