--- a/app/src/main/res/layout/layout_dialog_impegniincorso.xml
+++ b/app/src/main/res/layout/layout_dialog_impegniincorso.xml
@@ -143,14 +143,11 @@
                 android:textColor="@android:color/black"
                 android:textSize="18sp" />
 
-            <EditText
-                android:id="@+id/eallarme"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/hh_mm"
-                android:inputType="time"
-                android:textAlignment="center" />
+            <Spinner
+                android:id="@+id/sallarme"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
         </TableRow>
 
         <TableRow
