--- a/app/src/main/res/layout/activity_impegni_in_corso.xml
+++ b/app/src/main/res/layout/activity_impegni_in_corso.xml
@@ -25,7 +25,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="5dp"
         android:backgroundTint="@android:color/transparent"
-        android:queryHint='Ricerca per tipo: Es. "Lavorativo"'
+        android:queryHint="Ricerca per TIPO o DATA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
