--- a/app/src/main/res/layout/riga_layout_attivita.xml
+++ b/app/src/main/res/layout/riga_layout_attivita.xml
@@ -46,14 +46,15 @@
         android:id="@+id/cancella_attivitaincorso"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginTop="10dp"
         android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/todo"
         android:tint="@color/colorAccent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_delete" tools:targetApi="lollipop"
-        android:layout_marginRight="16dp" />
+        app:srcCompat="@android:drawable/ic_delete"
+        tools:targetApi="lollipop"
+        android:layout_marginRight="10dp" />
 
 </android.support.constraint.ConstraintLayout>
